--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ target/
 # Исключаем из игнорирования target в src/main и src/test
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+# Игнорируем всё в папке .gradle #
+.gradle/
 # Игнорируем все файлы и папки .idea
 .idea/
 
